--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </div>
     </nav>
     <section class="section">
+        <div class="block"><img src="imgs/castle.jpg" alt=""></div>
     <div class="container">
      <div class="item">  
     <p>Disney has brought so much love into our lives over the years .It has brought some of the most icon myths onto the big screen.And we continue not only to love but also learn from them ,i can honestly say that i cut my teeth on love from a disney movie and for that i am forever grateful.</p></div> 
@@ -27,7 +28,7 @@
         It would be an understatement to not acknoweledge the effect that disney has had on our collective live and of course don't forget the castles they are simply to die for i know that theres a long standing internet joke about disney adults but this is only more proof of the impact disney has had on peoples lives the effects be damned.
     </p>
     </div>
-    <div class="item"><img src="imgs/castle.jpg" alt="one of disneys castles"> </div>
+    <div class="item"><img src="imgs/smallmickey.jpg" alt="one of disneys castles"> </div>
 
  </div>
 </section>
